@@ -3,9 +3,9 @@ package com.coffee.americanote.coffee.domain.response;
 import com.coffee.americanote.coffee.domain.entity.Coffee;
 import com.coffee.americanote.coffee.domain.entity.CoffeeFlavour;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record CoffeeResponse(
+        Long cafeId,
         String name,
         List<CoffeeFlavourResponse> flavours,
         String intensity,
@@ -14,9 +14,10 @@ public record CoffeeResponse(
 ) {
     public CoffeeResponse(Coffee coffee, List<CoffeeFlavour> flavours) {
         this(
+                coffee.getCafe().getId(),
                 coffee.getName(),
                 flavours.stream().map(CoffeeFlavourResponse::new)
-                                .collect(Collectors.toList()),
+                                .toList(),
                 coffee.getIntensity().getLabel(),
                 coffee.getAcidity().getLabel(),
                 coffee.getPrice()
